--- a/tests/greenheart/input_files/floris/floris_input_osw_18MW.yaml
+++ b/tests/greenheart/input_files/floris/floris_input_osw_18MW.yaml
@@ -1,6 +1,6 @@
 name: Gauss
 description: Three turbines using Gauss model
-floris_version: v3.0.0
+floris_version: v4.0.0
 
 logging:
   console:
@@ -17,7 +17,8 @@ solver:
 flow_field:
   air_density: 1.225
   reference_wind_height: -1 # -1 is code for use the hub height
-  turbulence_intensity: 0.06
+  turbulence_intensities:
+  - 0.06
   wind_directions:
   - 270.0
   wind_shear: 0.33
@@ -114,3 +115,4 @@ wake:
       constant: 0.5
       ai: 0.8
       downstream: -0.32
+  enable_active_wake_mixing: false
