--- a/examples/greenheart/05-offshore-h2/input/plant/greenheart_config.yaml
+++ b/examples/greenheart/05-offshore-h2/input/plant/greenheart_config.yaml
@@ -13,7 +13,8 @@ project_parameters:
   atb_year: 2025
   cost_year: 2022 # to match ATB
 finance_parameters:
-  general_inflation: 0.025 # based on 2022 ATB
+  costing_general_inflation: 0.025 # used to adjust modeled costs to cost_year
+  profast_general_inflation: 0.025 # based on 2022 ATB
   discount_rate: 0.10 # nominal return based on 2022 ATB basline workbook
   debt_equity_split: 68.5 # 2022 ATB uses 68.5% debt
   property_tax: 0.01 # percent of CAPEX # combined with property insurance then between H2A and H2FAST defaults
@@ -52,11 +53,21 @@ finance_parameters:
   wind:
     expected_plant_cost: 'none'
 electrolyzer:
+  sizing:
+    resize_for_enduse: False
+    size_for: 'BOL' #'BOL' (generous) or 'EOL' (conservative)
+    hydrogen_dmd: 
   rating: 180 # MW # 0.9*Plant rating appears near-optimal for 400 MW wind plant with 3 days of underground pipe storage # MW
+  cluster_rating_MW: 180
+  pem_control_type: 'basic'
+  eol_eff_percent_loss: 10 #eol defined as x% change in efficiency from bol
+  uptime_hours_until_eol: 77600 #number of 'on' hours until electrolyzer reaches eol
+  include_degradation_penalty: True #include degradation
+  turndown_ratio: 0.1 #turndown_ratio = minimum_cluster_power/cluster_rating_MW
   electrolyzer_capex: 700 # $/kW conservative 2025 centralized. high 700, low 300 # based on https://www.irena.org/-/media/Files/IRENA/Agency/Publication/2020/Dec/IRENA_Green_hydrogen_cost_2020.pdf
-  time_between_replacement: 62320 # 62320 based on PEM Electrolysis H2A Production Case Study Documentation estimate of 7 years, 40000 based on current est (see unpublished report), 80000 hours based on OSW atb_year = 2025
   replacement_cost_percent: 0.15 # percent of capex - H2A default case
-  model: "singlitico2021" # "basic" is a basic cost model based on H2a and HFTO program record for PEM electrolysis. "singlitico2021" uses cost estimates from that paper
+  cost_model: "singlitico2021" # "basic" is a basic cost model based on H2a and HFTO program record for PEM electrolysis. "singlitico2021" uses cost estimates from that paper
+  time_between_replacement: 62320 # 62320 based on PEM Electrolysis H2A Production Case Study Documentation estimate of 7 years, 40000 based on current est (see unpublished report), 80000 hours based on OSW atb_year = 2025
 h2_transport_compressor:
   outlet_pressure: 68 # bar based on HDSAM
 h2_storage_compressor:
@@ -72,15 +83,6 @@ h2_storage:
   capacity_from_max_on_turbine_storage: False # if True, then days of storage is ignored and storage capacity is based on how much h2 storage fits on the turbines in the plant using Kottenstete 2003.
   type: "none" # can be one of ["none", "pipe", "turbine", "pressure_vessel", "salt_cavern", "lined_rock_cavern"]  
   days: 3 # [days] how many days worth of production we should be able to store (this is ignored if `capacity_from_max_on_turbine_storage` is set to True)
-# platform:
-#   opex_rate: 0.0111 # % of capex to determine opex (see table 5 in https://www.acm.nl/sites/default/files/documents/study-on-estimation-method-for-additional-efficient-offshore-grid-opex.pdf)
-#   installation_days: 14 # days
-#   site:
-#     depth: -1
-#     distance: -1
-#   equipment:
-#     tech_combined_mass: -1
-#     tech_required_area: -1
 platform:
   opex_rate: 0.0111 # % of capex to determine opex (see table 5 in https://www.acm.nl/sites/default/files/documents/study-on-estimation-method-for-additional-efficient-offshore-grid-opex.pdf)
   # Modified orbit configuration file for a single platform to carry "X technology"
